<resources>
    <string name="app_name">CST2335 Final Project</string>
    <string name="sunrise_and_sunset_lookup">Sunrise and Sunset Lookup</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="dictionary">Dictionary</string>
    <string name="deezer_song_search">Deezer Song Search</string>
    <string name="help">Help</string>
    <string name="show_terms">Show Saved Terms</string>
    <string name="hide_terms">Hide Saved Terms</string>
    <string name="api_error">That didn\'t work!</string>
    <string name="ok">OK</string>
    <string name="dictionary_help_message">This application leverages dictionaryapi.dev which offers a free API for retrieving a term\'s definitions. \n\nInput terms and click Search button to begin!</string>
    <string name="dictionary_help_title">Usage</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="dictionary_delete_confirm_message">Do you want to delete this definition?</string>
    <string name="question">Question:</string>
    <string name="dictionary_delete_confirmation">You deleted definition #</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lookup">Lookup</string>
    <string name="show_locations">Show Favorites Locations</string>
    <string name="hide_locations">Hide Favorites Locations</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="sunrise_sunset_help_message">This application leverages SunriseSunset.io which offers a free API for retrieving sunrise and sunset times for a specific longitude and latitude. \n\nInput coordinates and click Lookup button to begin!</string>
    <string name="sunrise_sunset_help_title">Usage</string>
    <string name="sunrise_sunset_confirm_message">Do you want to delete this location?</string>
    <string name="sunrise_sunset_deletion_confirmation">You deleted location #</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="delete">Delete</string>
    <string name="deezer_help_message">This application leverages api.deezer.com which offers a free API for retrieving songs for a specific artist. \n\nInput artist name and click Search button to begin!</string>
    <string name="deezer_help_title">Usage</string>
    <string name="show_favorite_songs">Show Favorite Songs</string>
    <string name="deezer_confirm_message">Do you want to delete this song?</string>
    <string name="deezer_deletion_confirmation">You deleted song </string>
    <string name="saved_successfully">Saved successfully!</string>
</resources>
