<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sunrise_and_sunset_lookup"
        android:icon="@drawable/sunrise"
        android:title="@string/sunrise_and_sunset_lookup"
        app:showAsAction="never" />
    <item
        android:id="@+id/recipe_search"
        android:icon="@drawable/recipe"
        android:title="@string/recipe_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/dictionary"
        android:icon="@drawable/dictionary"
        android:title="@string/dictionary"
        app:showAsAction="never" />
    <item
        android:id="@+id/deezer_song_search"
        android:icon="@drawable/deezer"
        android:title="@string/deezer_song_search"
        app:showAsAction="never" />
</menu>